--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
           <meta name="viewport" content="width=device-width, initial-scale=1" />
           <meta name="theme-color" content="#000000" />
           <meta name="description" content="Chdidiebube's portfolio!" />
- <!-- <link rel="icon" href="cover.ico" type="image/x-icon" /> -->
-  <link rel="shortcut icon" href="profile (2).ico" type="image/x-icon" />
+ <link rel="icon" href="cover.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="profile.ico" type="image/x-icon" />
           <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
